Fix first feedback

--- a/src/translation/en/main.json
+++ b/src/translation/en/main.json
@@ -72,7 +72,7 @@
 
   "section.myJob": {
     "title": "My job",
-    "text": "My job is not just to create pretty web concepts that are similar to you, our job is also to make sure your product is online is more efficient, secure and more scalable possible. Your product must convert. Your product must differentiate you. That's where i come in.",
+    "text": "My job is not only to create beautiful web designs that look like you, it is also to make sure that your online product is as efficient, secure and scalable as possible. Your product must convert. Your product must differentiate you. That's where I come in.",
     "link": "Contact me"
   },
 
