--- a/src/translation/fr/main.json
+++ b/src/translation/fr/main.json
@@ -72,7 +72,7 @@
 
   "section.myJob": {
     "title": "Mon travail",
-    "text": "Mon travail n'est pas seulement de créer de jolis concepts web qui vous ressemblent, notre travail est aussi de nous assurer que votre produit est en ligne est plus efficace, sécurisé et plus évolutif possible. Votre produit doit convertir. Votre produit doit vous différencier. C'est là que j'interviens.",
+    "text": "Mon travail n'est pas seulement de créer de jolis concepts web qui vous ressemblent, il est aussi de m'assurer que votre produit en ligne est plus efficace, sécurisé et le plus évolutif possible. Votre produit doit convertir. Votre produit doit vous différencier. C'est sur ces points-là que j'interviens.",
     "link": "Contactez-moi"
   },
 
@@ -100,7 +100,7 @@
 
   "section.skills": {
     "title": "Mes technos",
-    "text": "Voici mon panel de technos pour réussir au mieux tous vos projets."
+    "text": "Voici mon panel de technos pour réussir aux mieux tous vos projets."
   },
 
   "section.vision": {
